syntax = "proto3";
package auth.v1;
option go_package="coolcar/auth/api/gen/v1;authpb";

message LoginRequest{
    string code = 1;  //向服务器发送code
}

message LoginResponse{   //服务器上传code到微信api返回服务器，服务器自定义token和token有效时间
    string accss_token = 1; 
    int32 expires_in = 2;
}
//接口
service AuthService{
    rpc Login(LoginRequest) returns (LoginResponse);
}